# banking-app

./: .env.sample  LICENSE  README.md  database_design.drawio  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  changelog.txt  prestart.py  pyproject.toml  schema.drawio  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_add_models.py  9c93b13ad24e_initialise_models_and_relations.py
backend/src/: __init__.py  main.py
backend/src/core/: __init__.py  database.py  security.py  settings.py
backend/src/crud/: __init__.py  account.py  card.py  customer.py  loan.py  transaction.py
backend/src/dependencies/: __init__.py  account.py  card.py  common.py  customer.py  loan.py
backend/src/endpoints/: __init__.py  account.py  auth.py  card.py  customer.py  exceptions.py  health.py  loan.py  self.py  transaction.py
backend/src/models/: __init__.py  account.py  card.py  customer.py  loan.py  transaction.py
backend/src/schemas/: __init__.py  account.py  card.py  common.py  customer.py  health.py  loan.py  token.py  transaction.py
backend/src/utils/: __init__.py  account.py  card.py  currency.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.jsx  handleError.jsx
frontend/src/components/: ATM.jsx  AccountOpen.jsx  Accounts.jsx  CardActivate.jsx  CardAdd.jsx  CardDetails.jsx  Cards.jsx  Customer.jsx  Dashboard.jsx  LoanPayoff.jsx  LoanTake.jsx  Loans.jsx  NotFound.jsx  Sidebar.jsx  TransactionTableRow.jsx  (+2 more)
(+25 files in other folders)
